@@ -20,6 +20,7 @@ resolution.header					= Resolution
 type.header                     = Severity
 openedby.header                 = Opened by
 assignedto.header               = Assigned to
+storypoints.header              = Story Points
 showuserstory.button               = Open
 trashuserstory.button              = Trash
 setdone.button                  = Archive
@@ -65,6 +66,7 @@ archive_userstory.button             = Save and archive
 trash_userstory.button             = Trash
 add_message.button              = Add message
 project.label                   = Project
+storypoints.label               = Story Points
 status.label                    = Status
 priority.label                  = Priority
 source.label                      = Source
