@@ -1,16 +1,17 @@
 intranet                    = Intranet
 
-innoworkuserstories                  = User Stories
-innoworkuserstoriesprefs        = User Stories
-userstory-name                 = User Stories
-userstory                      = User Story
+innoworkuserstories      = User Stories
+innoworkuserstoriesprefs = User Stories
+userstory-name           = User Stories
+userstory                = User Story
 
-id                          = Number
-title                       = Title
-projectid                   = Project
-statusid                    = Status
-priorityid                  = Priority
-creationdate                = Creation date
-openedby                    = Opened by
-assignedto                  = Assigned to
+id           = Number
+title        = Title
+projectid    = Project
+storypoints  = Story Points
+statusid     = Status
+priorityid   = Priority
+creationdate = Creation date
+openedby     = Opened by
+assignedto   = Assigned to
 
