@@ -20,6 +20,7 @@ resolution.header					= Risoluzione
 type.header                     = Severità
 openedby.header                 = Aperto da
 assignedto.header               = Assegnato a
+storypoints.header              = Story Points
 showuserstory.button               = Apri
 trashuserstory.button              = Cestina
 setdone.button                  = Archivia
@@ -61,6 +62,7 @@ archive_userstory.button             = Salva e archivia
 trash_userstory.button             = Cestina
 add_message.button              = Aggiungi messaggio
 project.label                   = Progetto
+storypoints.label               = Story Points
 status.label                    = Stato
 priority.label                  = Priorità
 source.label                      = Provenienza
