@@ -8,6 +8,7 @@ userstory                = User Story
 id           = Numero
 title        = Titolo
 projectid    = Progetto
+storypoints  = Story Points
 statusid     = Stato
 priorityid   = Priorità
 creationdate = Data di creazione
