@@ -1,3 +1,10 @@
+1.x.x
+------------------
+NEW FEATURES:
+- Added support for Story Points. (Alex Pagnoni)
+
+
+
 1.0.0 - 2014/07/28
 ------------------
 - First release.
